feat(webview,engine,tooling): introduce Tailwind + shadcn UI, Biome tooling, and UX refactors
- Add TailwindCSS + PostCSS pipeline for webview; prefix classes with `tw-`
- Introduce shadcn-style UI primitives (button, input, tooltip, popover, dialog, etc.)
- Refactor webview components to use new design system; improve layouts and sidebar/toolbar UX
- Add Biome linter/formatter and `npm` scripts (`check`, `format`, `biome`, typecheck)
- Enhance VS Code tasks/launch configs and add detached webview watch script
- Tighten engine code: safer fs directory creation, clearer message payloads, minor regex cleanup
- Improve node sorting/loop utilities readability; maintain behavior
- Update AGENTS.md with lint/format/typecheck guidance and scripts

--- a/package.json
+++ b/package.json
@@ -1,41 +1,62 @@
 {
-  "name": "amp-editor",
-  "displayName": "Amp Workflow Editor",
-  "version": "0.0.1",
-  "publisher": "prinova",
-  "engines": {
-    "vscode": ">=1.90.0"
-  },
-  "main": "dist/extension.js",
-  "activationEvents": [
-    "onCommand:ampEditor.openWorkflow"
-  ],
-  "contributes": {
-    "commands": [
-      {
-        "command": "ampEditor.openWorkflow",
-        "title": "Amp: Open Workflow Editor"
-      }
-    ]
-  },
-  "scripts": {
-    "build:webview": "vite build --config webview/vite.config.mts",
-    "build:ext": "tsc -p .",
-    "build": "npm run build:webview && npm run build:ext"
-  },
-  "dependencies": {
-    "@xyflow/react": "^12.1.4",
-    "lucide-react": "^0.460.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.3.3",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.8",
-    "vscode": "^1.1.47"
-  }
+    "name": "amp-editor",
+    "displayName": "Amp Workflow Editor",
+    "version": "0.0.1",
+    "publisher": "prinova",
+    "engines": {
+        "vscode": ">=1.90.0"
+    },
+    "main": "dist/extension.js",
+    "activationEvents": ["onCommand:ampEditor.openWorkflow"],
+    "contributes": {
+        "commands": [
+            {
+                "command": "ampEditor.openWorkflow",
+                "title": "Amp: Open Workflow Editor"
+            }
+        ]
+    },
+    "scripts": {
+        "build:webview": "vite build --config webview/vite.config.mts",
+        "watch:webview": "vite build --watch --config webview/vite.config.mts --mode development",
+        "build:ext": "tsc -p .",
+        "typecheck:webview": "tsc -p webview/tsconfig.json",
+        "typecheck": "tsc -p . && npm run -s typecheck:webview",
+        "biome": "biome check --apply --error-on-warnings .",
+        "format": "npm run biome",
+        "check": "npm run -s typecheck && npm run -s biome",
+        "lint": "npm run biome",
+        "build": "npm run -s typecheck && npm run -s build:webview && npm run -s build:ext"
+    },
+    "dependencies": {
+        "@vscode/codicons": "^0.0.36",
+        "@xyflow/react": "^12.1.4",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.460.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "uuid": "^10.0.0",
+        "@radix-ui/react-accordion": "^1.1.2",
+        "@radix-ui/react-popover": "^1.1.2",
+        "@radix-ui/react-tooltip": "^1.0.7",
+        "@radix-ui/react-switch": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
+        "class-variance-authority": "^0.7.0",
+        "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-label": "^2.0.2"
+    },
+    "devDependencies": {
+        "@types/node": "^20.11.30",
+        "@types/react": "^18.2.66",
+        "@types/react-dom": "^18.2.22",
+        "@types/vscode": "^1.90.0",
+        "@vitejs/plugin-react": "^4.3.3",
+        "typescript": "^5.6.3",
+        "vite": "^5.4.8",
+        "@biomejs/biome": "1.7.2",
+        "@sourcegraph/tsconfig": "^4.0.1",
+        "tailwindcss": "^3.4.13",
+        "postcss": "^8.4.47",
+        "postcss-nested": "^6.0.1"
+    }
 }
