--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "engines": {
         "vscode": ">=1.90.0"
     },
-    "main": "dist/extension.js",
+    "main": "dist/src/extension.js",
     "activationEvents": ["onCommand:ampEditor.openWorkflow"],
     "contributes": {
         "commands": [
@@ -17,11 +17,10 @@
         ]
     },
     "scripts": {
-        "build:webview": "vite build --config webview/vite.config.mts",
-        "watch:webview": "vite build --watch --config webview/vite.config.mts --mode development",
+        "build:webview": "vite build --config workflow/Web/vite.config.mts",
+        "watch:webview": "vite build --watch --config workflow/Web/vite.config.mts --mode development",
         "build:ext": "tsc -p .",
-        "typecheck:webview": "tsc -p webview/tsconfig.json",
-        "typecheck": "tsc -p . && npm run -s typecheck:webview",
+        "typecheck": "tsc -p .",
         "biome": "biome check --apply --error-on-warnings .",
         "format": "npm run biome",
         "check": "npm run -s typecheck && npm run -s biome",
