--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "module": "commonjs",
         "lib": ["ES2022"],
         "outDir": "dist",
-        "rootDir": "src",
+        "rootDir": ".",
         "declaration": false,
         "sourceMap": true,
         "strict": true,
@@ -16,6 +16,6 @@
         "jsx": "react-jsx",
         "noUnusedLocals": true
     },
-    "include": ["src"],
-    "exclude": ["node_modules", "webview"]
+    "include": ["src", "workflow/Application", "workflow/Core", "workflow/DataAccess"],
+    "exclude": ["node_modules", "webview", "workflow/Web"]
 }
