--- a/workflow/Web/tsconfig.json
+++ b/workflow/Web/tsconfig.json
@@ -13,5 +13,5 @@
         "types": ["vite/client"],
         "noUnusedLocals": true
     },
-    "include": ["**/*.ts", "**/*.tsx"]
+    "include": ["**/*.ts", "**/*.tsx", "workflow.html"]
 }
