chore(dev): improve webview DX with background watch, auto-reload, and safer configs
- Add VS Code background task with problem matcher for webview watcher readiness
- Rewrite scripts/start-webview-watch.js to emit start/ready markers, stream output, and cleanly terminate
- Auto-reload Workflow webview on dist changes during development with debounced FS watcher
- Adjust Vite config to prevent rebuild loops, flatten assets, and set stable entry names
- Update Tailwind content config (note: verify HTML classes are still included)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -34,7 +34,21 @@
             "options": {
                 "cwd": "${workspaceFolder}"
             },
-            "problemMatcher": []
+            "isBackground": true,
+            "problemMatcher": [
+                {
+                    "owner": "custom",
+                    "fileLocation": "autoDetect",
+                    "pattern": {
+                        "regexp": "."
+                    },
+                    "background": {
+                        "activeOnStart": true,
+                        "beginsPattern": "^WEBVIEW_WATCH_START$",
+                        "endsPattern": "^WEBVIEW_WATCH_READY$"
+                    }
+                }
+            ]
         }
     ]
 }
