refactor(workflow): consolidate UX, typing, and validation improvements; add docs
- Strengthen workflow integrity: edge validation, prune dangling edges, prevent duplicates/self-loops
- Improve approval flow: introduce typed ApprovalResult and AbortedError, add node_rejected protocol and cleanup listeners
- Enhance save/load: JSON schema validation, version gating (1.x), clearer result unions, and banner notifications
- Harden protocol and messaging: static guard imports, DTO converters, strict safePost usage
- Refactor selection/clone and node ops: centralized selection logic, safer drag handling, unified clone behavior
- Normalize node schemas: move CLI approval flag into data, validate custom nodes, auto-select on add
- Build and typecheck updates: separate web TS checks, watch only in dev, broaden includes
- UI fixes: validate CLI inputs with inline errors; simplify props on custom edges
- Docs: add comprehensive README with architecture, scripts, security, and troubleshooting

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "build:webview": "vite build --config workflow/Web/vite.config.mts",
         "watch:webview": "vite build --watch --config workflow/Web/vite.config.mts --mode development",
         "build:ext": "tsc -p .",
-        "typecheck": "tsc -p .",
+        "typecheck": "tsc -p . && tsc -p workflow/Web/tsconfig.json",
         "biome": "biome check --apply --error-on-warnings .",
         "format": "npm run biome",
         "check": "npm run -s typecheck && npm run -s biome",
