--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "scripts": {
         "build:webview": "vite build --config workflow/Web/vite.config.mts",
         "watch:webview": "vite build --watch --config workflow/Web/vite.config.mts --mode development",
-        "build:ext": "tsc -p .",
+        "build:ext": "node scripts/bundle-ext.mjs",
         "typecheck": "tsc -p . && tsc -p workflow/Web/tsconfig.json",
         "biome": "biome check --apply --error-on-warnings .",
         "format": "npm run biome",
@@ -35,6 +35,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@sourcegraph/amp-sdk": "file:../upstreamAmp/sdk",
         "@vscode/codicons": "^0.0.36",
         "@xyflow/react": "^12.1.4",
         "class-variance-authority": "^0.7.0",
@@ -53,6 +54,7 @@
         "@types/uuid": "^10.0.0",
         "@types/vscode": "^1.90.0",
         "@vitejs/plugin-react": "^4.3.3",
+        "esbuild": "^0.21.5",
         "postcss": "^8.4.47",
         "postcss-nested": "^6.0.1",
         "tailwindcss": "^3.4.13",
