feat(webview, workflow, UI): stream LLM timeline, accordion debug UI, and improved tool result rendering
- Stream LLM assistant timeline to sidebar via JSONL events and new `node_assistant_content` protocol
- Introduce Accordion-based assistant debug UI with stable JSON expansion IDs
- Pair `tool_use` with corresponding `tool_result` JSON and constrain JSON render height
- Show concise tool args in assistant titles; add helpers to shorten values and safely parse JSON
- Remove LLM temperature/maxTokens/Google Search options from UI and types; update default workflow accordingly
- Auto-sync SDK on build; refine README/AGENTS and sidebar labels; sanitize encrypted thinking blocks
- Add `happy-dom` dependency to resolve runtime DOM parsing in extension host
- Minor UI/formatting cleanups for RightSidebar and list processing to satisfy Biome rules

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "vscode": ">=1.90.0"
     },
     "main": "dist/src/extension.js",
-    "activationEvents": ["onCommand:ampEditor.openWorkflow"],
+    "activationEvents": [
+        "onCommand:ampEditor.openWorkflow"
+    ],
     "contributes": {
         "commands": [
             {
@@ -17,8 +19,11 @@
         ]
     },
     "scripts": {
+        "sync:sdk": "pnpm -C /home/prinova/CodeProjects/upstreamAmp/sdk build && npm i /home/prinova/CodeProjects/upstreamAmp/sdk",
+        "prebuild": "npm run -s sync:sdk",
         "build:webview": "vite build --config workflow/Web/vite.config.mts",
         "watch:webview": "vite build --watch --config workflow/Web/vite.config.mts --mode development",
+        "prebuild:ext": "npm run -s sync:sdk",
         "build:ext": "node scripts/bundle-ext.mjs",
         "typecheck": "tsc -p . && tsc -p workflow/Web/tsconfig.json",
         "biome": "biome check --apply --error-on-warnings .",
@@ -40,6 +45,7 @@
         "@xyflow/react": "^12.1.4",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "happy-dom": "^14.0.0",
         "lucide-react": "^0.460.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
