feat(llm): add per-node disabled tools; sync UI to SDK tool list; Node16 TS config
- Add `disabledTools?: string[]` to LLM node model (core + web types)
- Pass disabled tools to SDK via settings key `tools.disable` in ExecuteWorkflow
- PropertyEditor: render Tools checklist using SDK `getAllToolNames()` to avoid drift
- RightSidebar: normalize tool names with SDK `resolveToolName` for labels/arg display
- Improve RightSidebar auto-scroll trigger using assistant item count tick
- TS configs:
  - Root: switch to `module: "Node16"` and `moduleResolution: "Node16"`, disable `noUnusedLocals`
  - Webview: target/lib `ES2023`, set `noUnusedLocals: false`

Notes:
- Confirm SDK expects `string[]` for `tools.disable` and casing semantics

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "@sourcegraph/tsconfig",
     "compilerOptions": {
         "target": "ES2022",
-        "module": "commonjs",
+        "module": "Node16",
         "lib": ["ES2022"],
         "outDir": "dist",
         "rootDir": ".",
@@ -12,9 +12,9 @@
         "esModuleInterop": true,
         "resolveJsonModule": true,
         "skipLibCheck": true,
-        "moduleResolution": "node",
+        "moduleResolution": "Node16",
         "jsx": "react-jsx",
-        "noUnusedLocals": true
+        "noUnusedLocals": false
     },
     "include": ["src", "workflow/**/*.ts", "workflow/**/*.tsx"],
     "exclude": ["node_modules", "workflow/Web"]
