feat(LLM approvals): add UI-driven approval flow for blocked tool runs
- Detect blocked-on-user tool_result events during LLM streaming
- Post pending_approval to webview with summary (toAllow, reason, tokens)
- Await user decision via approvalHandler; forward via amp.sendToolInput
- Generalize RightSidebar Approve/Reject buttons for any pending node
- Keep textarea editable only for CLI pending approvals; LLM remains read-only

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
         "vscode": ">=1.90.0"
     },
     "main": "dist/src/extension.js",
-    "activationEvents": [
-        "onCommand:nebulaFlow.openWorkflow"
-    ],
+    "activationEvents": ["onCommand:nebulaFlow.openWorkflow"],
     "contributes": {
         "commands": [
             {
