feat(editor): migrate persistence to .nebulaflow and stabilize Property Editor with improved sidebar resizing
- Switch workflows and custom nodes storage to `.nebulaflow`, with automatic migration from legacy `.sourcegraph/{workflows,nodes}`
- Standardize sidebar handles to 4px and enforce a minimum 8px center gap; right sidebar unbounded, left capped at 600px
- Make Property Editor always visible; remove accordion state and reuse existing header styling
- Launch dev host with `--disable-extensions` and add clear development-mode activation log
- Update AGENTS.md and README to reflect new persistence paths and sidebar behavior

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+            "args": ["--disable-extensions", "--extensionDevelopmentPath=${workspaceFolder}"],
             "preLaunchTask": "dev: start-webview-watch",
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
             "sourceMaps": true
@@ -16,7 +16,11 @@
             "type": "extensionHost",
             "request": "launch",
             "debugWebWorkerHost": true,
-            "args": ["--extensionDevelopmentPath=${workspaceFolder}", "--extensionDevelopmentKind=web"],
+            "args": [
+                "--disable-extensions",
+                "--extensionDevelopmentPath=${workspaceFolder}",
+                "--extensionDevelopmentKind=web"
+            ],
             "preLaunchTask": "dev: start-webview-watch",
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
             "sourceMaps": true
