chore(package): exclude built .vsix artifacts from vsce package
- Update .vscodeignore to ignore any *.vsix files under dist/
- Prevents accidental inclusion of previously packaged artifacts in new VSIX builds

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -21,6 +21,8 @@ node_modules/**
 
 # Build outputs we keep
 !dist/**
+# Exclude packaged artifacts from dist
+dist/*.vsix
 README.md
 package.json
 LICENSE
