chore(packaging): exclude built VSIX artifacts from package
- Remove forced inclusion of entire dist/ tree
- Ignore any nested VSIX files with dist/**/*.vsix
- Prevents embedding previous build outputs inside new package

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -20,9 +20,8 @@ package-lock.json
 node_modules/**
 
 # Build outputs we keep
-!dist/**
 # Exclude packaged artifacts from dist
-dist/*.vsix
+dist/**/*.vsix
 README.md
 package.json
 LICENSE
