refactor(workflow): enable parallel execution UX and reliability; add dev watch tooling
- Introduce Kahn-style parallel scheduler as default with per-type caps and fail-fast cancellation
- Support If/Else control flow with branch materialization and seeded resume decisions
- Persist and hydrate workflow execution state; prevent stale seeds on resume
- Add visual execution cues: concurrent spinners, selection highlight, and stopped-at-node orange border
- Keep inactive nodes visible in display mode; modularize edge path strategies (bezier default)
- Improve single-node execution: centralized dispatch, guards, approvals, and reliable Stop behavior
- Enhance sidebar “Playbox”: parallel step grouping, branch labels, and selected-node highlighting
- Add confirmation modal for destructive Clear action
- Stabilize webview hot-reload and message handling; guard disposed panels
- Prioritize active workflow workspace roots for LLM execution in multi-root scenarios
- Add dev watch orchestration: extension/webview watchers via esbuild context; new npm scripts
- Bump versions incrementally to v0.2.4; update CHANGELOG and future enhancements notes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nebula-flow",
     "displayName": "NebulaFlow Workflow Editor",
-    "version": "0.2.0",
+    "version": "0.2.4",
     "publisher": "prinova",
     "engines": {
         "vscode": ">=1.90.0"
@@ -23,6 +23,8 @@
         "watch:webview": "vite build --watch --config workflow/Web/vite.config.mts --mode development",
         "prebuild:ext": "npm run -s sync:sdk",
         "build:ext": "node scripts/bundle-ext.mjs",
+        "watch:ext": "node scripts/bundle-ext.mjs --watch",
+        "watch": "node scripts/dev-watch.mjs",
         "typecheck": "tsc -p . && tsc -p workflow/Web/tsconfig.json",
         "biome": "biome check --apply --error-on-warnings .",
         "format": "npm run biome",
