feat(workflow): add pause/resume execution with deterministic resume and scheduler fixes
- Implement pause gate in parallel scheduler and emit PausedError when in-flight drains
- Extend protocol with pause_workflow command and execution_paused event
- Wire pause state through extension, connect webview pause toggle via pauseRef
- Resume using cached seeds (outputs, decisions, variables); include all previously executed seeded nodes
- Disable all seeded nodes unconditionally (bypass or not) to prevent re-execution
- Fix bypass IF/ELSE defaulting behavior and resolve scheduler stalls with integrated pre-completion
- Improve error messaging with explicit dependency chain reporting
- Source resume outputs from authoritative execution state to ensure correctness
- Add UI: pause button in SidebarActionsBar and paused indicator in Playbox
- Add optional NEBULAFLOW_FILTER_PAUSE_SEEDS env flag to filter resume seeds
- Add global user storage scope with live refresh; update settings and protocol for scope toggling
- Version bumps and housekeeping: 0.2.7/0.2.8 updates, changelog reorg, ignore tasks/ directory
- Docs: update references from amp-editor to nebulaflow in future-enhancements.md

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "nebula-flow",
+    "name": "nebulaflow",
     "displayName": "NebulaFlow Workflow Editor",
-    "version": "0.2.6",
+    "version": "0.2.8",
     "publisher": "prinova",
     "engines": {
         "vscode": ">=1.90.0"
@@ -14,7 +14,31 @@
                 "command": "nebulaFlow.openWorkflow",
                 "title": "NebulaFlow: Open Workflow Editor"
             }
-        ]
+        ],
+        "configuration": {
+            "title": "NebulaFlow",
+            "properties": {
+                "nebulaFlow.storageScope": {
+                    "type": "string",
+                    "enum": [
+                        "workspace",
+                        "user"
+                    ],
+                    "enumDescriptions": [
+                        "Store workflows and nodes in the current workspace (.nebulaflow)",
+                        "Store workflows and nodes in your user folder (global)"
+                    ],
+                    "default": "user",
+                    "description": "Where NebulaFlow stores workflows and custom nodes."
+                },
+                "nebulaFlow.globalStoragePath": {
+                    "type": "string",
+                    "default": "",
+                    "markdownDescription": "Absolute path for global storage. If empty, uses your home directory. Content is stored under .nebulaflow/",
+                    "scope": "application"
+                }
+            }
+        }
     },
     "scripts": {
         "sync:sdk": "pnpm -C /home/prinova/CodeProjects/upstreamAmp/sdk build && npm i /home/prinova/CodeProjects/upstreamAmp/sdk",
