--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nebulaflow",
     "displayName": "NebulaFlow Workflow Editor",
-    "version": "0.2.9",
+    "version": "0.2.11",
     "publisher": "prinova",
     "engines": {
         "vscode": ">=1.90.0"
@@ -68,7 +68,11 @@
         "lucide-react": "^0.460.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "dompurify": "^3.1.6",
+        "highlight.js": "^11.10.0",
+        "marked": "^12.0.2",
+        "marked-highlight": "^2.1.1"
     },
     "devDependencies": {
         "@biomejs/biome": "1.7.2",
