--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nebulaflow",
     "displayName": "NebulaFlow Workflow Editor",
-    "version": "0.2.11",
+    "version": "0.2.13",
     "publisher": "prinova",
     "engines": {
         "vscode": ">=1.90.0"
@@ -49,9 +49,11 @@
         "check": "npm run -s typecheck && npm run -s biome",
         "lint": "npm run biome",
         "build": "npm run -s typecheck && npm run -s build:webview && npm run -s build:ext",
-        "package:vsix": "npm run -s build && rm -f dist/${npm_package_name}-${npm_package_version}.vsix && vsce package --out dist/${npm_package_name}-${npm_package_version}.vsix"
+        "package:vsix": "npm run -s build && rm -f dist/${npm_package_name}-${npm_package_version}.vsix && vsce package --out dist/${npm_package_name}-${npm_package_version}.vsix",
+        "test:subflows": "node tasks/integration/run-subflows-tests.mjs"
     },
     "dependencies": {
+        "@prinova/amp-sdk": "file:vendor/amp-sdk/amp-sdk.tgz",
         "@radix-ui/react-accordion": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-label": "^2.0.2",
@@ -59,20 +61,19 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-tooltip": "^1.0.7",
-        "@prinova/amp-sdk": "file:vendor/amp-sdk/amp-sdk.tgz",
         "@vscode/codicons": "^0.0.36",
         "@xyflow/react": "^12.1.4",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "dompurify": "^3.1.6",
         "happy-dom": "^14.0.0",
+        "highlight.js": "^11.10.0",
         "lucide-react": "^0.460.0",
+        "marked": "^12.0.2",
+        "marked-highlight": "^2.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "uuid": "^10.0.0",
-        "dompurify": "^3.1.6",
-        "highlight.js": "^11.10.0",
-        "marked": "^12.0.2",
-        "marked-highlight": "^2.1.1"
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "@biomejs/biome": "1.7.2",
