--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "strict": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
+        "noUnusedParameters": false,
         "skipLibCheck": true,
         "moduleResolution": "Node16",
         "jsx": "react-jsx",
