refactor(host): introduce host abstraction and electron packaging flow
- Introduce `IHostEnvironment`, `IFileSystem`, `IWindow`, `IWorkspace`, `IMessagePort`, and related VS Code host adapters to decouple workflow runtime from VS Code-specific APIs
- Refactor workflow slices, messaging, storage, and workspace handling to use the new host abstraction and centralized `workflow-session` state
- Add Electron-ready host wiring, custom `nebulaflow://` protocol, and main/renderer integration to host the workflow UI in a standalone desktop app
- Implement persistent Electron workspace selection, storage scope synchronization, and VS Code Dark Modern-aligned theming for the Electron webview
- Configure Electron build and packaging flows for Windows and cross-platform targets, including asar unpack rules, bundled Amp SDK, and release scripts
- Improve webview assistant UX with refined LLM node sidebar behavior, markdown rendering, and CLI approval ergonomics, plus related documentation and agents guide updates

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -32,3 +32,10 @@ future-enhancements.md
 .nebulaflow/
 tasks/
 dist-tests
+.amp/
+dist/electron
+dist/release
+electron/
+.dev-notes.md
+.gitignore
+AGENTS.md
