feat(workflow): introduce loop-aware execution, overrides, and LLM chat flows
- Add Loop Start/End nodes with sequential and hybrid loop-aware parallel execution paths
- Support iteration overrides and runtime loop iteration updates with strict validation and clamping
- Refine loop visualization, parallel analysis, and scheduler fallbacks for looped graphs
- Centralize LLM/CLI execution cores and shared templating, improving Amp SDK integration and error handling
- Enable per-node LLM chat continuation with scoped drafts and assistant rendering refinements
- Add LLM image attachment support and extend webview sidebars for richer node configuration
- Introduce clear workflow command, accumulator rich-text editing, and sidebar accordion layout tweaks
- Tighten webview keyboard and auto-scroll behavior for assistant panes and fullscreen modes
- Update vendored Amp SDK bundle, extend typecheck coverage to Electron, and refresh docs and changelog for loops and execution changes

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "build:ext": "node scripts/bundle-ext.mjs",
         "watch:ext": "node scripts/bundle-ext.mjs --watch",
         "watch": "node scripts/dev-watch.mjs",
-        "typecheck": "tsc -p . && tsc -p workflow/Web/tsconfig.json",
+        "typecheck": "tsc -p . && tsc -p workflow/Web/tsconfig.json && tsc -p electron/tsconfig.json --noEmit",
         "biome": "biome check --apply --error-on-warnings .",
         "format": "npm run biome",
         "check": "npm run -s typecheck && npm run -s biome",
