fix(ci): revert to `npm ci` without `--no-integrity`
- Reverts the CI dependency installation process back to `npm ci` without the `--no-integrity` flag.
- This change is intended to address potential issues or side effects introduced by the `--no-integrity` flag.
- Why: Reverts to the original `npm ci` command to ensure consistent and reliable dependency installation in the CI environment.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           cache: 'npm'
       
       - name: Install dependencies
-        run: npm ci --no-integrity
+        run: npm ci
       
       - name: Run typecheck and lint
         run: npm run check
