feat: initial license and repository details
- Adds an MIT License file to the repository.
- Includes repository details in the package.json file.
- Updates .vscodeignore to exclude the LICENSE file.
- Why: Adds a license to the project and includes repository information for better discoverability and clarity.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "version": "0.2.13",
     "publisher": "prinova",
     "author": "prinova",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/PriNova/nebulaflow.git"
+    },
     "engines": {
         "vscode": ">=1.90.0"
     },
