--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
     "name": "nebulaflow",
     "displayName": "NebulaFlow Workflow Editor",
-    "version": "0.2.13",
+    "version": "0.2.14",
     "publisher": "prinova",
     "author": "prinova",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/PriNova/nebulaflow.git"
+    },
     "engines": {
         "vscode": ">=1.90.0"
     },
@@ -98,7 +102,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "dompurify": "^3.1.6",
-        "happy-dom": "^14.0.0",
+        "happy-dom": "^20.1.0",
         "highlight.js": "^11.10.0",
         "lucide-react": "^0.460.0",
         "marked": "^12.0.2",
@@ -121,11 +125,11 @@
         "electron": "^39.2.3",
         "electron-builder": "^26.0.12",
         "electron-packager": "^17.1.2",
-        "esbuild": "^0.21.5",
+        "esbuild": "^0.27.2",
         "postcss": "^8.4.47",
         "postcss-nested": "^6.0.1",
         "tailwindcss": "^3.4.13",
         "typescript": "^5.6.3",
-        "vite": "^5.4.8"
+        "vite": "^7.3.1"
     }
 }
