feat: add comprehensive documentation for NebulaFlow
- Introduces a full suite of documentation for the NebulaFlow VS Code extension, covering getting started, user guides, API references, workflow examples, technical details, contributing guidelines, and resources.
- Creates individual markdown files for various topics, including:
  - Introduction, installation, configuration, and quick start guides.
  - Workflow design principles, node type references (LLM, CLI, Condition, Loop), connection management, variable usage, and execution/debugging techniques.
  - API references for the extension, protocol contracts, node types, and event system.
  - Basic and advanced workflow examples, along with integration examples for LLM, CLI, and external APIs.
  - Technical documentation on architecture, development setup, testing, build process, and deployment.
  - Contributing guidelines, workflow, code style, and pull request processes.
  - Resources such as FAQs, troubleshooting guides, and a glossary.
- Configures MkDocs with the Material theme to build and deploy the documentation to GitHub Pages.
- Sets up a GitHub Actions workflow to automatically deploy documentation updates on pushes to the `main` branch.
- Adds `.venv` to `.gitignore` and `.vscodeignore` to exclude virtual environment files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ dist/
 .vscode/settings.json
 .sourcegraph/
 .nebulaflow/
-docs/
 tasks/
 scripts/update-amp-sdk.mjs
 dist-tests/subflows.spec.cjs
@@ -11,3 +10,4 @@ dist-tests/subflows.spec.cjs
 scripts/check-sdk-version.mjs
 .amp/
 amp-review.md
+.venv/**
